--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,11 @@
       @apply bg-background text-foreground;
     }
   }
+  /* Adjust the date picker position */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  position:absolute;
+  right: 10px;
+  /* transform: translateY(-50%); */
+  /* top: 50%; */
+  
+}
